# CS-GO-AI

./: .gitignore  CMakeLists.txt  LICENSE  README.md  cmake_build.bat  cmake_build_VS2022.bat  cmake_refresh_VS2019.bat  cmake_refresh_VS2022.bat  config.json  config.txt  memoryOffsets.txt  nav_mesh.json  navmesh.json  offsets.json
CS2-AI/: CMakeLists.txt  windeployqt.cmake
CS2-AI/include/CS2/: Aimbot.h  Button.h  CS2AI.h  ConfigReader.h  Constants.h  GameInformationHandler.h  MemoryManager.h  MovementStrategy.h  NavmeshPoints.h  Offsets.h  Triggerbot.h
CS2-AI/include/UI/: CS2Runner.h  MainWindow.h  MainWindow.ui  NavmeshEditor.h  NavmeshEditorWidget.h  QTBoxLogger.h
CS2-AI/include/Utility/: Dijkstra.h  Logging.h  Vec3D.h
CS2-AI/src/: main.cpp
CS2-AI/src/CS2/: Aimbot.cpp  Button.cpp  CS2AI.cpp  ConfigReader.cpp  GameInformationHandler.cpp  MemoryManager.cpp  MovementStrategy.cpp  NavmeshPoints.cpp  Offsets.cpp  Triggerbot.cpp
CS2-AI/src/UI/: CS2Runner.cpp  MainWindow.cpp  NavmeshEditor.cpp  NavmeshEditorWidget.cpp  QTBoxLogger.cpp
CS2-AI/src/Utility/: Utility.cpp
CSGO_AI/: CMakeLists.txt  windeployqt.cmake
CSGO_AI/include/: Aimbot.h  Button.h  CSGOAI.h  CSGORunner.h  ConfigData.h  ConfigReader.h  GameInformationHandler.h  Logger.h  MainWindow.h  MainWindow.ui  MemoryManager.h  MovementStrategy.h  NavmeshEditor.h  NavmeshEditorWidget.h  NavmeshEditorWidget.ui  NavmeshPoints.h  Offsets.h  QTBoxLogger.h  Triggerbot.h  Vec2D.h  Vec3D.h
CSGO_AI/include/CSGO/: Aimbot.h  Button.h  CSGOAI.h  ConfigReader.h  GameInformationHandler.h  MemoryManager.h  MovementStrategy.h  NavmeshPoints.h  Offsets.h  Triggerbot.h
CSGO_AI/include/UI/: CSGORunner.h  MainWindow.h  MainWindow.ui  NavmeshEditor.h  NavmeshEditorWidget.h  NavmeshEditorWidget.ui  QTBoxLogger.h
CSGO_AI/include/Utility/: Dijkstra.h  Logger.h  Logging.h  Utility.h  Vec2D.h  Vec3D.h
CSGO_AI/src/: Aimbot.cpp  Button.cpp  CSGOAI.cpp  CSGORunner.cpp  ConfigReader.cpp  FileReader.cpp  GameInformationHandler.cpp  Logging.cpp  MainWindow.cpp  MemoryManager.cpp  MovementStrategy.cpp  NavmeshEditor.cpp  NavmeshEditorWidget.cpp  NavmeshPoints.cpp  Offsets.cpp  QTBoxLogger.cpp  Triggerbot.cpp  main.cpp  main_navmeshpointcreator.cpp
CSGO_AI/src/CSGO/: Aimbot.cpp  Button.cpp  CSGOAI.cpp  ConfigReader.cpp  GameInformationHandler.cpp  MemoryManager.cpp  MovementStrategy.cpp  NavmeshPoints.cpp  Offsets.cpp  Triggerbot.cpp
CSGO_AI/src/UI/: CSGORunner.cpp  MainWindow.cpp  NavmeshEditor.cpp  NavmeshEditorWidget.cpp  QTBoxLogger.cpp
CSGO_AI/src/Utility/: Dijkstra.cpp  Logging.cpp  Utility.cpp
Configuration/: config.json
DEPRECATED_NavmeshCreator/MapJsons/: nodes2.json
DEPRECATED_NavmeshCreator/NavMashCreator/: main.html  main.js
Navmesh/json/: de_dust2.json  workshop_460183010_1v1.json
NavmeshCreator/MapJsons/: example.json  nav_points.json  nodes.json
NavmeshCreator/NavMashCreator/: canvas.js  main.html  main.js  test.js
NavmeshPointsaver/: CMakeLists.txt
NavmeshPointsaver/include/: ConfigData.h  FileReader.h  NavmeshPoints.h  Offsets.h  Vec3D.h
NavmeshPointsaver/src/: FileReader.cpp  MemoryManager.cpp  NavmeshPoints.cpp  Offsets.cpp  main.cpp
